@@ -2,7 +2,7 @@ Griffith 0.9.4
 ==============
 * Fixed volume/colection loaning problem
 * Support for different database names with sqlite
-* Updated movie plugins: OFDb, PTGate, Kino.de, DVD-Palace and IMDB-de
+* Updated movie plugins: FDb, OFDb, PTGate, Kino.de, DVD-Palace and IMDB-de
 * New movie plugins: FilmTipset
 * Translation files synchronized with Rosetta
   + new: Japanese, Russian and Turkish
